bug fix for css warning issue and uploaded image not showing issue

--- a/scada.css
+++ b/scada.css
@@ -499,7 +499,7 @@ div.mxWindow .geButton {
 	padding:6px;
 	margin:6px;
 	color:#a0a0a0;
-	fontSize:13px;
+	font-size:13px;
 }
 .geTitle img {
 	opacity:0.5;
